# vtfx_reader

./: .gitignore  Cargo.toml  readme.md  vtfx_reader.code-workspace
src/: args.rs  image_format.rs  main.rs  resource_entry_info.rs  vtfx.rs
test/: 00000290.vtf  brickwall001_normal.360.vtf  c-14576_-13880_-1212.hdr.ps3.vtf  scout_blue.360.vtf  scout_head.360.vtf  v_leadpipe.360.vtf
