[package]
name = "vtfx_reader"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bswap = "1.0.0"
clap = { version = "4.3.19", features = ["derive"] }
image = "0.24.6"
lzma-rs = "0.3.0"
num_enum = "0.6.1"
once_cell = "1.18.0"
opener = "0.6.1"
texpresso = "2.0.1"
